Bug 812908; add a debug pref for forcing active layers; r=roc